--- a/XYH.Log4Net.Extend/XYH.Log4Net.Extend.csproj
+++ b/XYH.Log4Net.Extend/XYH.Log4Net.Extend.csproj
@@ -39,6 +39,7 @@
       <HintPath>..\BLL\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
