--- a/XYH.Log4Net.Extend.Test/log4net.config
+++ b/XYH.Log4Net.Extend.Test/log4net.config
@@ -20,14 +20,14 @@
     Date：代表只判断日期间隔进行日志新文件创建输出
     Composite：代表对文件大小和日期间隔都需要进行判断并创建新文件输出
     -->
-    <param name="RollingStyle" value="Composite"/>
+    <param name="RollingStyle" value="Date"/>
     <!-- 日志文件名 只有RollingStyle=Date或者Composite才生效-->
     <param name="DatePattern" value="yyyyMMdd&quot;.html&quot;"/>
     <!-- 单个日志文件最大的大小-->
-    <param name="MaxFileSize" value="100"/>
+    <param name="MaxFileSize" value="10240"/>
     <!-- 默认值为-1。只有当RollingStyle=Size或者Composite 并且文件超过MaximumFileSize的大小时，如果要创建新的文件来存储日志，会根据CountDirection的值来重命名文件。
     大于-1的值时，file里指定的文件名会依次加上.0,.1,.2递增。当等于或小于-1时，创建依赖于MaxSizeRollBackups参数值，创建备份日志数。-->
-    <param name="CountDirection" value="1"/>
+    <param name="CountDirection" value="-1"/>
     <!-- 备份文件的个数 只的备份文件个数，当大于备份文件个数时，系统会自动覆盖最先创建的文件-->
     <param name="MaxSizeRollBackups" value="3"/>
     <!-- 扩展一个节点：最大日志文件总个数，当日志文件大于该值时，组件自动删除最开始创建的文件，
@@ -54,6 +54,7 @@
                                              异常堆栈：%exception &lt;BR &gt;%n
                                              &lt;HR Size=1 &gt;"/>
     </layout>
+ 
   </appender>
   <!-- name属性指定其名称,type则是log4net.Appender命名空间的一个类的名称,意思是,指定使用哪种介质-->
   <appender name="LogErrorFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -73,7 +74,7 @@
     <!-- 扩展一个节点：最大日志文件总个数，当日志文件大于该值时，组件自动删除最开始创建的文件，
     log4本身没有该参数，我们平时在使用的时候一般使用时，有时候想要删除历史日志，这就是一个不错的选择，改操作只会定时检测一次
     当不需要删除历史日志时，那么该值可以不需要设置，或者设置为小于1的值即可-->
-    <param name="ExtendMaximumFiles" value="100"/>
+    <param name="ExtendMaximumFiles" value="5"/>
     <!--布局-->
     <layout type="XYH.Log4Net.Extend.HandlerPatternLayout">
       <param name="ConversionPattern" value="&lt;HR COLOR=red&gt;%n
