--- a/XYH.Log4Net.Extend.Standard.Test/log4net.config
+++ b/XYH.Log4Net.Extend.Standard.Test/log4net.config
@@ -33,8 +33,8 @@
     <param name="MaxSizeRollBackups" value="3"/>
     <!-- 扩展一个节点：最大日志文件总个数，当日志文件大于该值时，组件自动删除最开始创建的文件，
     log4本身没有该参数，我们平时在使用的时候一般使用时，有时候想要删除历史日志，这就是一个不错的选择，改操作只会定时检测一次
-    当不需要删除历史日志时，那么该值可以不需要设置，或者设置为小于1的值即可
-    <param name="ExtendMaximumFiles" value="100"/>-->
+    当不需要删除历史日志时，那么该值可以不需要设置，或者设置为小于1的值即可-->
+    <param name="ExtendMaximumFiles" value="100"/>
     <!--布局-->
            <layout type="log4net.Layout.PatternLayout,log4net">
       <param name="ConversionPattern" value="&lt;HR COLOR=blue&gt;%n%n
@@ -86,8 +86,8 @@
     <param name="MaxSizeRollBackups" value="3"/>
     <!-- 扩展一个节点：最大日志文件总个数，当日志文件大于该值时，组件自动删除最开始创建的文件，
     log4本身没有该参数，我们平时在使用的时候一般使用时，有时候想要删除历史日志，这就是一个不错的选择，改操作只会定时检测一次
-    当不需要删除历史日志时，那么该值可以不需要设置，或者设置为小于1的值即可
-    <param name="ExtendMaximumFiles" value="100"/>-->
+    当不需要删除历史日志时，那么该值可以不需要设置，或者设置为小于1的值即可-->
+    <param name="ExtendMaximumFiles" value="100"/>
     <!--布局-->
          <layout type="log4net.Layout.PatternLayout,log4net">
       <param name="ConversionPattern" value="&lt;HR COLOR=blue&gt;%n%n
@@ -130,8 +130,8 @@
     <param name="RollingStyle" value="Composite"/>
     <!-- 扩展一个节点：最大日志文件总个数，当日志文件大于该值时，组件自动删除最开始创建的文件，
     log4本身没有该参数，我们平时在使用的时候一般使用时，有时候想要删除历史日志，这就是一个不错的选择，改操作只会定时检测一次
-    当不需要删除历史日志时，那么该值可以不需要设置，或者设置为小于1的值即可
-    <param name="ExtendMaximumFiles" value="5"/>-->
+    当不需要删除历史日志时，那么该值可以不需要设置，或者设置为小于1的值即可-->
+    <param name="ExtendMaximumFiles" value="5"/>
     <!--布局-->
          <layout type="log4net.Layout.PatternLayout,log4net">
       <param name="ConversionPattern" value="&lt;HR COLOR=red&gt;%n
